<resources>
    <string name="app_name">The Hammer</string>
    <string name="title_activity_items">Items</string>
    <string name="title_activity_item">Item</string>
    <string name="title_activity_auctions">Auctions</string>
    <string name="title_activity_auction">Auction</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_data">Personal Settings</string>
    <string name="name">Name</string>
    <string name="app_settings">App Settings</string>
    <string name="firstname_default">John</string>
    <string name="lastname">Last name</string>
    <string name="lastname_default">Doe</string>
    <string name="email">E-mail</string>
    <string name="email_default">johndoe@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_default">johndoe</string>
    <string name="address">Address</string>
    <string name="address_default">Boulevard 123</string>
    <string name="phone">Phone Number</string>
    <string name="phone_default">060123456</string>
    <string name="splash_screen_show">Show Startup Screen</string>
    <string name="splash_screen_visibility">Startup Screen Wait Time(seconds)</string>
    <string name="splash_screen_visibility_default">2</string>
    <string name="app_name_upper">THE HAMMER</string>
    <string name="items">Items</string>
    <string name="auctions">Auctions</string>
    <string name="filter_by">Filter by:</string>
    <string name="add_bid">Add bid</string>
    <string name="item_details">Details</string>
    <string name="item_auction">Auction</string>
    <string name="price">Price</string>
    <string name="date_time">Date</string>
    <string name="user_name">User</string>
    <string name="filter">Filter</string>
    <string name="status">Finished</string>
    <string name="input_filter">You have to fill in the text field</string>
    <string name="pref_header_user_info">User info</string>
    <string name="pref_header_splash_screen">Splash screen</string>
    <string name="title_activity_item1">Item1Activity</string>
    <string name="tab_details">Details</string>
    <string name="tab_bids">Bids</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_one_item">OneItemActivity</string>
    <string name="tab_details_title">Details</string>
    <string name="tab_bids_title">Bids</string>
    <string name="item_info_title">Item info</string>
    <string name="auction_info_title">Auction Info</string>
    <string name="point_symbol">.</string>
    <string name="euro_symbol">€</string>
    <string name="pref_header_user_image">User image</string>
</resources>
